unpackaged/main/default/objects/sked_Notification_Setting__mdt/sked_Notification_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Skedulo Notification Setting</label>
    <pluralLabel>Skedulo Notification Settings</pluralLabel>
</CustomObject>