unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Active__c.field-meta.xml
<CustomField>
    <fullName>sked_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>