unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Custom_Filter__c.field-meta.xml
<CustomField>
    <fullName>sked_Custom_Filter__c</fullName>
    <label>Custom Filter</label>
    <type>TextArea</type>
</CustomField>