unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Destination_Field__c</fullName>
    <inlineHelpText>Custom field that is used to store destination&#39;s email address or phone number</inlineHelpText>
    <label>Destination Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>