unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Email_From_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Email_From_Address_Field__c</fullName>
    <label>Email From Address Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>