unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Email_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Email_Target_Field__c</fullName>
    <inlineHelpText>This must be User, Contact or Lead, required by Salesforce.</inlineHelpText>
    <label>Email Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>