unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Expiry_DateTime_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Expiry_DateTime_Field__c</fullName>
    <label>Expiry Date/Time Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>