unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Oneoff_Protocol_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Oneoff_Protocol_Field__c</fullName>
    <label>Oneoff Protocol Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>