unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Priority__c.field-meta.xml
<CustomField>
    <fullName>sked_Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>