unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Sending_From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>sked_Sending_From_Email_Address__c</fullName>
    <label>Sending From Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>