unpackaged/main/default/objects/sked_Notification_Setting__mdt/fields/sked_Target_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>sked_Target_Field_Values__c</fullName>
    <label>Target Field Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>