unpackaged/main/default/objects/sked_Notification_Setting__mdt/listViews/All_Settings.listView-meta.xml
<ListView>
    <fullName>All_Settings</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>sked_Active__c</columns>
    <columns>sked_Target_SObject__c</columns>
    <columns>sked_Target_Field__c</columns>
    <columns>sked_Target_Field_Value__c</columns>
    <columns>sked_Trigger__c</columns>
    <columns>sked_Notification_Type__c</columns>
    <columns>sked_Destination_Field__c</columns>
    <columns>sked_Template__c</columns>
    <columns>sked_Subject__c</columns>
    <columns>sked_Notification_Target_Field__c</columns>
    <columns>sked_Content_Renderer__c</columns>
    <columns>sked_Filter__c</columns>
    <columns>sked_Email_From_Address_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Settings</label>
    <language>en_US</language>
</ListView>