unpackaged/main/default/objects/sked_Notification_Setting__mdt/listViews/Notification_OFF.listView-meta.xml
<ListView>
    <fullName>Notification_OFF</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>sked_Active__c</columns>
    <columns>sked_Target_SObject__c</columns>
    <columns>sked_Target_Field__c</columns>
    <columns>sked_Target_Field_Value__c</columns>
    <columns>sked_Trigger__c</columns>
    <columns>sked_Notification_Type__c</columns>
    <columns>sked_Destination_Field__c</columns>
    <columns>sked_Template__c</columns>
    <columns>sked_Subject__c</columns>
    <columns>sked_Notification_Target_Field__c</columns>
    <columns>sked_Content_Renderer__c</columns>
    <columns>sked_Filter__c</columns>
    <columns>sked_Email_From_Address_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Notification OFF</label>
    <language>en_US</language>
</ListView>